# rust_jni_example

./: Cargo.toml  README.md
graph-evaluator/: Cargo.toml
graph-evaluator/src/: lib.rs  models.rs
graph-evaluator/tests/: invalid_evaluation.rs  invalid_graphs.rs  simple_graph.rs
graph-evaluator/tests/data/: bad_next_keys_graph.json  broken_graph.json  cycle_graph.json  empty_graph.json  example_graph.json  missing_edges_graph.json
