[package]
name = "graph-evaluator"
version = "0.1.0"
authors = ["Amy Keibler <wanderingelf14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = [ "derive" ] }
serde_json = "1.0.57"
thiserror = "1.0.20"
itertools = "0.9.0"
